# alloy-json-abi-enum-bug

./: Cargo.toml  README.md
src/: Contract.json  main.rs
